assets/css/style.css
/* Google Fonts import */
@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Inconsolata:wght@200..900&display=swap');


/* Asterisk wildcard selector to override default browser styles */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;

}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* Generic project styles */
    color: #fff;
    font-family: "Inconsolata", monospace;
    font-size: 1rem;

}

/* Header styles */
header {
    color: #424040;
    padding-left: 1rem;
    position: relative;
    z-index: 50;
    width: 100%;
    display: flex;
    justify-content: flex-start;
    align-items: baseline;

}

/* header #logo-img {
    height: 74px;
    min-width: 83px;
    background: #f2f2f2 url("../images/zawrel.png") left center / cover no-repeat;
} */

a {
    text-decoration: none;
    color: #424040;
}

h1,
h2,
h3 {
    font-family: "Karla", sans-serif;
}


#menu {
    display: flex;
    font-size: 110%;
    letter-spacing: 2px;
    list-style-type: none;
    padding-top: 8px;
}

#menu>li {
    margin-bottom: 0.7em;
    padding-right: 1rem;
}

.active {
    border-bottom: 1px solid #424040;

}

/* Sticky navbar styles */
nav {
    position: sticky;
    top: 0;
    background-color: #fff;
    width: 100vw;
    left: 0;
    padding: 0 1rem;
    box-shadow: 0 1px 1px #424040;
    z-index: 100;
}

/* Main content styles */
main {
    background-color: #424040;
    /* Make main element take up all surplus space to push footer to the bottom */
    flex: 1 0 auto;
}

/* .dark-bg {
    background-color: inherit;
    color: inherit;
} */

.light-bg {
    background-color: #fff;
    color: #424040;
}

#intro-container {
    max-width: 424px;
    position: relative;
    margin: auto;
    height: 100vh;
    background-image: url(../images/friedrich-zawrel-1978.jpg);
    background-attachment: fixed;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center 38px;
  
}

#intro-text {
    position: absolute;
    background-color: rgba(0, 0, 0, .6);
    /* height: 0; */
    text-align:justify;
    width: 300px;
    height: 300px;
    padding: 1em;
    bottom: 20%;
}

.scroll-down {
    text-align: right;
    
}

/* #early-childhood {
    box-sizing: border-box;
} */
/*
#childhood-container {
    position: relative;
    margin: auto;
    height: 100vh;
    width: 100vw;
    display: flex; 
    flex-wrap: wrap; */

/* }
#childhood-container > video {
    width: 100%;
    height: 100%;
    object-fit: cover;
    position: relative;
    z-index: -1;
  }

  #childhood-text-1 {
    position: absolute;
    background-color: rgba(f, f, f, .6);
    height: 0; */
    /* text-align:justify;
    width: 300px;
    height: 300px;
    padding: 1em;
    border: 1px solid #424040;
    top: 10%;
    bottom: 10%;
    right: 10%;
  }
  
  #childhood-text-2 {
    position: absolute;
    background-color: rgba(f, f, f, .6);
    text-align:justify;
    width: 300px;
    height: 300px;
    padding: 1em;
    border: 1px solid #424040;
    top: 10%;
    bottom: 10%;
    right: 10%; 
    
}*/




/* Footer styles */
footer {
    position: fixed;
    bottom: 0;
    width: 100vw;
    background-color: #F2F2F2;
    color: #424040;
}



#socials {
    display: flex;
    justify-content: flex-end;
    font-size: 110%;
    letter-spacing: 2px;
    list-style-type: none;
    padding-top: 8px;
}

#socials>li {
    margin-bottom: 0.7em;
    padding-right: 1rem;

}

/* Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {

    #intro-container {
        min-width: 100%;
        max-width: 100%;
        background-image: url(../images/friedrich-zawrel-1978-zeitung.jpg);
        background-size: cover;
      
    }

    #intro-text {
        width: 370px;
        height: 300px;
        padding: 2em 3em 3em 2em;
        bottom: 30%;
    }
    

}

/* Media query: laptops and larger (1024px and up) */
@media screen and (min-width: 1024px) {

    #intro-container {
        max-width: 1023px;
        background-size: contain;

      
    }


    #intro-text {
        
        width: 420px;
        height: 300px;
        padding: 3em 4em 4em 2em;
    }
    
}

